<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/profileListFragment">

    <fragment
        android:id="@+id/profileListFragment"
        android:name="com.example.sssshhift.fragments.ProfileListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_profileListFragment_to_addProfileFragment"
            app:destination="@id/addProfileFragment" />
        <action
            android:id="@+id/action_profileListFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_profileListFragment_to_smartAutoSettingsFragment"
            app:destination="@id/smartAutoSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addProfileFragment"
        android:name="com.example.sssshhift.fragments.AddProfileFragment"
        android:label="@string/add_profile_title">
        <action
            android:id="@+id/action_addProfileFragment_to_profileListFragment"
            app:destination="@id/profileListFragment"
            app:popUpTo="@id/profileListFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.sssshhift.fragments.EditProfileFragment"
        android:label="@string/edit_profile_title">
        <action
            android:id="@+id/action_editProfileFragment_to_profileListFragment"
            app:destination="@id/profileListFragment"
            app:popUpTo="@id/profileListFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/smartAutoSettingsFragment"
        android:name="com.example.sssshhift.features.smartauto.SmartAutoSettingsFragment"
        android:label="@string/smart_auto_mode_title">
        <action
            android:id="@+id/action_smartAutoSettingsFragment_to_profileListFragment"
            app:destination="@id/profileListFragment"
            app:popUpTo="@id/profileListFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation> 